--- a/index.html
+++ b/index.html
@@ -16,40 +16,69 @@
     <header>
 
         <div class="search-bar">
-            search
+
+            <div class="nav-arrows">
+                <div class="icon-shape">
+                    <i class="fa-solid fa-chevron-left"></i>
+                </div>
+                <div class="icon-shape">
+                    <i class="fa-solid fa-chevron-right"></i>
+                </div>
+            </div>
+
+            <div class="icon-shape">
+                <i class="fa-solid fa-clock-rotate-left"></i>
+            </div>
+
+            <div class="input-wrapper">
+               <input type="text" class="input-shape" placeholder="Cerca">
+               <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
         </div>
 
         <nav class="app-nav">
             <ul>
-                <li>
-                    <i class="fa-solid fa-house" style="color: #74C0FC;"></i>
+                <li class="active">
+                    <i class="fa-solid fa-house"></i>
                     Home
                 </li>
                 <li>
-                    <i class="fa-solid fa-comment" style="color: #74C0FC;"></i>
+                    <i class="fa-solid fa-comment"></i>
                     Chat
                 </li>
                 <li>
-                    <i class="fa-solid fa-clock" style="color: #74C0FC;"></i>
+                    <i class="fa-solid fa-clock"></i>
                     Riunioni  
                 </li>
                 <li>
-                    <i class="fa-solid fa-address-book" style="color: #74C0FC;"></i>
+                    <i class="fa-solid fa-address-book"></i>
                     Contatti
                 </li>
                 <li>
-                    <i class="fa-solid fa-download" style="color: #74C0FC;"></i>
+                    <i class="fa-solid fa-download"></i>
                     App
                 </li>
         </nav>
 
-        <div class="profile">
-            profilo
+        <div class="profile-bar">
+            <div class="profile-avatar icon-shape">
+                <i class="fa-solid fa-user"></i>
+            </div>
         </div>
 
     </header>
 
     <main>
+
+        <div class="content-wrapper">
+            
+            <div class="icons-wrapper">
+
+            </div>
+            <div class="calls-card-wrapper">
+
+            </div>
+        </div>
 
     </main>
     
