--- a/index.html
+++ b/index.html
@@ -71,12 +71,44 @@
     <main>
 
         <div class="content-wrapper">
-            
-            <div class="icons-wrapper">
 
+            <div class="icons-wrapper">
+                <div class="icon-module">
+                    <div class="icon-box" style="background-color: darkorange">
+                        <i class="fa-solid fa-video"></i>
+                    </div>
+                    <h3>Nuova Riunione <i class="fa-solid fa-chevron-down"></i></h3>
+                </div>
+                <div class="icon-module">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-square-plus"></i>
+                    </div>
+                    <h3>Entra</h3>
+                </div>
+                <div class="icon-module">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-calendar-day"></i>
+                    </div>
+                    <h3>Calendario</h3>
+                </div>
+                <div class="icon-module">
+                    <div class="icon-box">
+                        <i class="fa-solid fa-square-caret-up"></i>
+                    </div>
+                    <h3>Condividi schermo</h3>
+                </div>
             </div>
+
             <div class="calls-card-wrapper">
 
+                <div class="card-header">
+                    <p class="time">00.16</p>
+                    <p>Venerdì 21 Febbraio 2025</p>
+                </div>
+
+                <div class="card-body">
+                    <p>Nessuna prossima riunione per oggi</p>
+                </div>
             </div>
         </div>
 
